# backend/src/api/devices.py
@@ -20,7 +20,6 @@ File: backend/src/api/devices.py
 
 from flask import Blueprint, request
 from flask_login import login_required
-from src.utils import dict_has_non_null_values
 from src.core import db
 from src.exceptions import APIException, ErrorCodes, InvalidBaseURLException
 from src.libs.auth import check_resource_authorization
@@ -28,10 +27,19 @@ from src.models.reviews import build_device_query
 from src.schemas.devices import DeviceStatusListSchema
 from src.schemas.reviews import ReviewListSchema
 from src.services.aitrios_service import decrypt_customer_details, get_aitrios_access_token, get_device_status
+from src.utils import dict_has_non_null_values
 
 api = Blueprint("devices", __name__, url_prefix="/devices")
 
-STATUS_API_EXPECTED_PARAMS = {"customer_id", "facility_name", "prefecture", "municipality"}
+STATUS_API_EXPECTED_PARAMS = {
+    "customer_id",
+    "facility_name",
+    "prefecture",
+    "municipality",
+    "page",
+    "page_size",
+    "status",
+}
 
 
 @api.get("/status")
@@ -77,7 +85,7 @@ def get_device_connection_status():
 
     query = ReviewListSchema(**request.args)
 
-    devices, count = build_device_query(db, customer_id=customer_id, parameters=query)
+    devices, count, _ = build_device_query(db, customer_id=customer_id, parameters=query)
 
     device_ids = ",".join([device.device_id for device in devices])
     # Get customer details
@@ -87,7 +95,7 @@ def get_device_connection_status():
         "client_secret": customer["client_secret"],
         "auth_url": customer["auth_url"],
         "base_url": customer["base_url"],
-        "application_id": customer["application_id"]
+        "application_id": customer["application_id"],
     }
     # Check if the console credentials has any null values present.
     if not dict_has_non_null_values(console_creds, exempt_key="application_id"):
